--- a/yatube/templates/base.html
+++ b/yatube/templates/base.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html> 
 <html lang="ru"> 
-  <head>    
+  <head>   
     {% include 'includes/head.html' %}
+    {% load static %}
   </head>
   <body>	   
     <header>
