--- a/yatube/templates/posts/post_detail.html
+++ b/yatube/templates/posts/post_detail.html
@@ -19,13 +19,13 @@
                 </a>
               </li>            
               <li class="list-group-item">
-                Автор: {{  post.author  }}
+                Автор: {{  post.author.get_full_name  }}
               </li>
               <li class="list-group-item d-flex justify-content-between align-items-center">
                 Всего постов автора:  <span >{{ user.posts.all.count }}</span>
               </li>
               <li class="list-group-item">
-                <a href="{% url 'posts:profile' post.author %}">
+                <a href="{% url 'posts:profile' post.author.username %}">
                   все посты пользователя
                 </a>
               </li>
@@ -33,7 +33,7 @@
           </aside>
           <article class="col-12 col-md-9">
             <p>{{  post.text  }}</p>
-             <!-- эта кнопка видна только автору -->
+
             <a class="btn btn-primary" href="{% url 'posts:post_edit' post.author.username post.pk %}">
               редактировать запись
             </a>                
