--- a/yatube/templates/base.html
+++ b/yatube/templates/base.html
@@ -1,16 +1,45 @@
-<!DOCTYPE html> 
-<html lang="ru"> 
-  <head>   
-    {% include 'includes/head.html' %}
+<!DOCTYPE html> <!-- Используется html 5 версии -->
+<html lang="ru"> <!-- Язык сайта - русский -->
+{% load static %}
+<link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
+  <head>    
+    <meta charset="utf-8"> <!-- Кодировка сайта -->
+    <!-- Сайт готов работать с мобильными устройствами -->
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- Загружаем фав-иконки -->
+    <link rel="icon" href="/static/img/fav/fav.ico" type="image">
+    <link rel="apple-touch-icon" sizes="180x180" href="/static/img/fav/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/static/img/fav/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/static/img/fav/favicon-16x16.png">
+    <meta name="msapplication-TileColor" content="#da532c">
+    <meta name="theme-color" content="#ffffff">
+    <!-- Подключен файл со стандартными стилями бустрап -->
+    <link rel="stylesheet" href="/static/css/bootstrap.min.css">
+    <title> 
+        {% block title %}
+        Последние обновления на сайте 
+        {% endblock %}
+    </title>
     {% load static %}
   </head>
-  <body>	   
+  <body>
     <header>
-        {% include 'includes/nav.html' %}
+      {% include 'includes/header.html' %}
     </header>
     <main>
-        {% block content %}CONTENT{% endblock content %}
+      <!-- класс py-5 создает отступы сверху и снизу блока -->
+      <div class="container py-21">
+        {% block content %}
+        The main information should be here. 
+        {% endblock %}
+      </div>  
     </main>
+    <!-- Использованы классы бустрапа: -->
+    <!-- border-top: создаёт тонкую линию сверху блока -->
+    <!-- text-center: выравнивает текстовые блоки внутри блока по центру -->
+    <!-- py-3: контент внутри размещается с отсупом сверху и снизу -->         
+    <footer>
       {% include 'includes/footer.html' %}
+    </footer>
   </body>
 </html>
