--- a/yatube/templates/includes/footer.html
+++ b/yatube/templates/includes/footer.html
@@ -1,3 +1,7 @@
+
 <footer class="border-top text-center py-3">
-  <p>© 2021 Copyright <span style="color:red">Ya</span>tube</p>    
-</footer>
+    <!-- тег span используется для добавления нужных стилей отдельным участкам текста --> 
+    <p>© 2020 Copyright <br> 
+    <span style="color:red">Ya</span>tube</p>   
+    </a>     
+  </footer>
