--- a/yatube/templates/posts/group_list.html
+++ b/yatube/templates/posts/group_list.html
@@ -1,21 +1,35 @@
 {% extends 'base.html' %}
+{% load static %}
+{% block css %}
+{% endblock %}
 
-{% block title %}
-  {{  group.title  }}
-{% endblock title %}
+{% block title%}
+Записи сообщества {{group.title}} | Yatube
+{% endblock %}
 
-{% block content %}
-      <div class="container py-5">        
-        <h1>Записи сообщества: {{  group.title  }}</h1>
-        <p>{{  group.description  }}</p>
-
-        {% for post in page %}
-            {% include "includes/post_item.html" with post=post %}
-        {% endfor %}
-
-        {% if page.has_other_pages %}
-            {% include "includes/paginator.html" with page_obj=page paginator=paginator%}
-        {% endif %}
-      </div>
-      
-{% endblock content %}
+{% block content%}
+<!--{{context}}-->
+<div>
+  <h1> {{group.title}} </h1> 
+  <p> {{group.description}} </p>
+</div>
+{% for post in posts %}
+    <ul>
+        <li>
+            Автор: 
+            {% if post.author.get_full_name == '' %}
+                {{post.author}}
+            {% else %}
+                {{post.author.get_full_name}}
+            {% endif %}
+        </li>
+    </ul>
+    <ul>
+        <li>
+            Дата публикации: {{post.pub_date|date:"d M Y"}}
+        </li>
+    </ul>
+    <p>{{post.text}}</p>
+  {% if not forloop.last %}<hr>{% endif %}
+{% endfor %}
+{% endblock %}
