--- a/yatube/templates/posts/index.html
+++ b/yatube/templates/posts/index.html
@@ -1,21 +1,34 @@
 {% extends 'base.html' %}
+{% load static %}
+{% block css %}
+{% endblock %}
 
-{% block title %}
-  Последние обновления на сайте
-{% endblock title %}
-
-{% block content %}
-      <div class="container py-5">        
-        <h1>Все посты</h1>
-
-        {% for post in page %}
-            {% include "includes/post_item.html" with post=post %}
-            {% if not forloop.last %}<hr>{% endif %}  
-        {% endfor %}
-
-        {% if page.has_other_pages %}
-            {% include "includes/paginator.html" with page_obj=page paginator=paginator%}
+{% block content%}
+<div>
+  <h1>Последние обновления на сайте</h1>
+  <!--{{posts|safe}}-->
+  {% for post in posts %}
+    <ul>
+      <li>
+        Автор: 
+        {% if post.author.get_full_name == '' %}
+          {{post.author}}
+        {% else %}
+          {{post.author.get_full_name}}
         {% endif %}
-      </div>
-      
-{% endblock content %}
+      </li>
+      <li>
+        Дата публикации: {{ post.pub_date|date:"d E Y" }}
+      </li>
+    </ul>
+    <p>{{ post.text }}</p>
+    
+    <a href="
+    {% url 'posts:group_list' post.group.slug %}">
+    все записи группы
+    </a>
+    {% if not forloop.last %}<hr>{% endif %}
+  {% endfor %} 
+
+{% endblock %}
+
